--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                     <br><br>
                     <a href="mailto:eric@voskuil.org">eric@voskuil.org</a>
                     <br><br>
-                    <a href="https://linkedin/in/evoskuil">linkedin/in/evoskuil</a>
+                    <a href="https://linkedin.com/in/evoskuil">linkedin.com/in/evoskuil</a>
                 </div>
             </div>
         </div>
