--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
 
         <div class="section">
-            <div class="title">THE PRESENTATIONS</div>
+            <div class="title">THE TALKS</div>
             <div class="content">
                 <div class="center-margin">
                     <iframe class="row-img"
