--- a/cryptoeconomics/index.html
+++ b/cryptoeconomics/index.html
@@ -9,6 +9,16 @@
         <link rel="icon" type="image/png" href="../images/fist.png" />
         <link rel="stylesheet" href="../style/style.css"/>
         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-XZV5NJFZFL"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'G-XZV5NJFZFL');
+        </script>        
     </head>
     <body>
         <header>
