--- a/cryptoeconomics/index.html
+++ b/cryptoeconomics/index.html
@@ -31,7 +31,7 @@
                     <img src="../images/hand-book.jpg" class="row-img" alt="Cryoptoeconomics - First Edition">
                 </div>
                 <div class="center-margin">
-                    <p>The <a href="Cryptoeconomics-e2-v1.2.pdf" target="blank_">free pdf book</a>.</p>
+                    <p>The <a href="Cryptoeconomics.pdf" target="blank_">free pdf book</a>.</p>
                     <p>The <a href="https://www.amazon.com/dp/1735060828" target="blank_">paperback and e-book</a>.</p>
                     <p>The <a href="https://github.com/libbitcoin/libbitcoin-system/wiki/Cryptoeconomics" target="blank_">wiki</a> (a little dated).</p>
                 </div>
@@ -89,7 +89,7 @@
             <div class="content">
                 <div class="event">
                     <p>
-                        <i>Cryptoeconomics</i> evolved over a couple of years as a series of topics on the <a href="https://github.com/libbitcoin/libbitcoin-system/wiki/Cryptoeconomics" target="_blank">libbitcoin-system GitHub wiki</a>. The 1st book edition was printed in Hanoi for <a href="https://cryptoecon.org" target="_blank">CryptoEcon 2020</a> in February 2020. The 2nd edition was released globally <a href="https://www.amazon.com/dp/1735060828" target="blank_">on Amazon</a> as a paperback and soon after as a Kindle e-book. There are no changes to the list of chapters between the two editions, though there are material changes in the 2nd edition. The 2nd edition is now also available as a <a href="Cryptoeconomics-e2-v1.2.pdf" target="blank_">free pdf</a>. Each format carries its own ISBN and a version number. The current version is 1.2. The wiki is maintained however it is not currently in sync with either edition and contains no images.
+                        <i>Cryptoeconomics</i> evolved over a couple of years as a series of topics on the <a href="https://github.com/libbitcoin/libbitcoin-system/wiki/Cryptoeconomics" target="_blank">libbitcoin-system GitHub wiki</a>. The 1st book edition was printed in Hanoi for <a href="https://cryptoecon.org" target="_blank">CryptoEcon 2020</a> in February 2020. The 2nd edition was released globally <a href="https://www.amazon.com/dp/1735060828" target="blank_">on Amazon</a> as a paperback and soon after as a Kindle e-book. There are no changes to the list of chapters between the two editions, though there are material changes in the 2nd edition. The 2nd edition is now also available as a <a href="Cryptoeconomics.pdf" target="blank_">free pdf</a>. Each format carries its own ISBN and a version number. <u>The current version is 1.2.1.</u> The wiki is maintained however it is not currently in sync with either edition and contains no images.
                     </p>
                 </div>
             </div>
