--- a/cryptoeconomics/index.html
+++ b/cryptoeconomics/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Cryoptoeconomics</title>
+        <title>Cryptoeconomics</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Fundamental Principles of Bitcoin">
@@ -28,7 +28,7 @@
          <div class="section first">
             <div class="content">
                 <div class="center-margin">
-                    <img src="../images/hand-book.jpg" class="row-img" alt="Cryoptoeconomics - First Edition">
+                    <img src="../images/hand-book.jpg" class="row-img" alt="Cryptoeconomics - First Edition">
                 </div>
                 <div class="center-margin">
                     <p>The <a href="Cryptoeconomics.pdf" target="blank_">free pdf book</a>.</p>
