Italian translation link.

--- a/cryptoeconomics/index.html
+++ b/cryptoeconomics/index.html
@@ -31,9 +31,11 @@
                     <img src="../images/hand-book.jpg" class="row-img" alt="Cryptoeconomics - First Edition">
                 </div>
                 <div class="center-margin">
-                    <p>The <a href="Cryptoeconomics.pdf" target="blank_">free pdf book</a>.</p>
-                    <p>The <a href="https://www.amazon.com/dp/1735060828" target="blank_">paperback and e-book</a>.</p>
-                    <p>The <a href="https://github.com/libbitcoin/libbitcoin-system/wiki/Cryptoeconomics" target="blank_">wiki</a> (a little dated).</p>
+                    <p>The <a href="Cryptoeconomics.pdf" target="blank_">free pdf book</a> (English).</p>
+                    <p>The <a href="https://www.amazon.com/dp/1735060828" target="blank_">paperback and e-book</a> (English).</p>
+                    <p>The <a href="https://github.com/libbitcoin/libbitcoin-system/wiki/Cryptoeconomics" target="blank_">English wiki</a> (a little dated).</p>
+                    <p>The <a href="https://github.com/parsevalbtc/cryptoeconomics-IT-translation" target="blank_">Italian wiki</a> (translated from the English wiki).</p>
+
                 </div>
                 <div class="center-margin">
                 <p>The comments...</p>
