--- a/cryptoeconomics/index.html
+++ b/cryptoeconomics/index.html
@@ -32,9 +32,11 @@
                 </div>
                 <div class="center-margin">
                     <p>The <a href="cryptoeconomics.pdf" target="blank_">free pdf</a> (English).</p>
+                    <p>The <a href="https://anchor.fm/cryptoecon" target="blank_">Spotify audiobook</a> (English).</p>
                     <p>The <a href="https://www.amazon.com/dp/1735060828" target="blank_">paperback and Kindle</a> (English).</p>
                     <p>The <a href="https://github.com/libbitcoin/libbitcoin-system/wiki/Cryptoeconomics" target="blank_">English wiki</a> (a little dated).</p>
-                    <p>The <a href="https://github.com/parsevalbtc/cryptoeconomics-IT-translation" target="blank_">Italian wiki</a> (translated from the English wiki).</p>
+                    <p>The <a href="https://github.com/parsevalbtc/cryptoeconomics-IT-translation#readme" target="blank_">Italian wiki</a> (translated from the English wiki).</p>
+                    <p>The <a href="https://github.com/lugaxker/cryptoeconomics-FR-translation#readme" target="blank_">French wiki</a> (translated from the English wiki).</p>
 
                 </div>
                 <div class="center-margin">
