Update wiki reference text.

--- a/cryptoeconomics/index.html
+++ b/cryptoeconomics/index.html
@@ -40,9 +40,9 @@
                     <p>The <a href="https://github.com/libbitcoin/libbitcoin-system/wiki/Cryptoeconomics" target="blank_">wiki</a> (a little dated).</p>
                     <p><b>FRENCH</b></p>
                     <p>The <a href="https://www.amazon.fr/dp/B09X6Q27GL" target="blank_">paperback and Kindle</a></p>
-                    <p>The <a href="https://github.com/lugaxker/cryptoeconomics-FR-translation#readme" target="blank_">wiki</a> (translated from the English wiki).</p>
+                    <p>The <a href="https://github.com/lugaxker/cryptoeconomics-FR-translation#readme" target="blank_">wiki</a> (translated from the current English book).</p>
                     <p><b>ITALIAN</b></p>
-                    <p>The <a href="https://github.com/parsevalbtc/cryptoeconomics-IT-translation#readme" target="blank_">wiki</a> (translated from the English wiki).</p>
+                    <p>The <a href="https://github.com/parsevalbtc/cryptoeconomics-IT-translation#readme" target="blank_">wiki</a> (translated from the dated English wiki).</p>
 
                 </div>
                 <div class="center-margin">
