Add Italian translation amazon link.

--- a/cryptoeconomics/index.html
+++ b/cryptoeconomics/index.html
@@ -43,8 +43,9 @@
                     <p>The <a href="https://www.amazon.fr/dp/B09X6Q27GL" target="blank_">paperback and Kindle</a></p>
                     <p>The <a href="https://github.com/lugaxker/cryptoeconomics-FR-translation#readme" target="blank_">wiki</a> (translated from the current English book).</p>
                     <p><b>ITALIAN</b></p>
-                    <p>The <a href="https://github.com/parsevalbtc/cryptoeconomics-IT-translation#readme" target="blank_">wiki</a> (translated from the dated English wiki).</p>
-
+                    <!--<p>The <a href="it/cryptoeconomia.pdf" target="blank_">free pdf</a></p>-->
+                    <p>The <a href="https://www.amazon.it/dp/1735060887" target="blank_">paperback and Kindle</a></p>
+                    <p>The <a href="https://github.com/parsevalbtc/cryptoeconomics-IT-translation#readme" target="blank_">wiki</a> (translated from the current English book).</p>
                 </div>
                 <div class="center-margin">
                 <p>The comments...</p>
