Publish Spanish and update wiki currency info.

--- a/cryptoeconomics/index.html
+++ b/cryptoeconomics/index.html
@@ -37,15 +37,18 @@
                     <p>The <a href="https://towardsliberty.com/agora/s/aa8WsHYNyBwzqmT/download/Eric%20Voskuil%20-%20Cryptoeconomics_Fundamental%20Principles%20of%20Bitcoin.mp3
 " target="blank_">mp3 audiobook</a></p>
                     <p>The <a href="https://www.amazon.com/dp/1735060828" target="blank_">paperback and Kindle</a></p>
-                    <p>The <a href="https://github.com/libbitcoin/libbitcoin-system/wiki/Cryptoeconomics" target="blank_">wiki</a> (a little dated).</p>
+                    <p>The <a href="https://github.com/libbitcoin/libbitcoin-system/wiki/Cryptoeconomics" target="blank_">wiki</a>.</p>
                     <p><b>FRENCH</b></p>
                     <p>The <a href="fr/cryptoéconomie.pdf" target="blank_">free pdf</a></p>
                     <p>The <a href="https://www.amazon.fr/dp/B09X6Q27GL" target="blank_">paperback and Kindle</a></p>
-                    <p>The <a href="https://github.com/lugaxker/cryptoeconomics-FR-translation#readme" target="blank_">wiki</a> (translated from the current English book).</p>
+                    <p>The <a href="https://github.com/lugaxker/cryptoeconomics-FR-translation#readme" target="blank_">wiki</a>.</p>
                     <p><b>ITALIAN</b></p>
                     <!--<p>The <a href="it/cryptoeconomia.pdf" target="blank_">free pdf</a></p>-->
                     <p>The <a href="https://www.amazon.it/dp/1735060887" target="blank_">paperback and Kindle</a></p>
-                    <p>The <a href="https://github.com/parsevalbtc/cryptoeconomics-IT-translation#readme" target="blank_">wiki</a> (translated from the current English book).</p>
+                    <p>The <a href="https://github.com/parsevalbtc/cryptoeconomics-IT-translation#readme" target="blank_">wiki</a>.</p>
+                    <p><b>SPANISH</b></p>
+                    <!--<p>The <a href="it/cryptoeconomia.pdf" target="blank_">free pdf</a></p>-->
+                    <p>The <a href="https://www.amazon.es/dp/B0BGF68MDB" target="blank_">paperback and Kindle</a></p>
                 </div>
                 <div class="center-margin">
                 <p>The comments...</p>
@@ -111,7 +114,7 @@
             <div class="content">
                 <div class="event">
                     <p>
-                        <i>Cryptoeconomics</i> evolved over a couple of years as a series of topics on the <a href="https://github.com/libbitcoin/libbitcoin-system/wiki/Cryptoeconomics" target="_blank">libbitcoin-system GitHub wiki</a>. The 1st book edition was printed in Hanoi for <a href="https://cryptoecon.org" target="_blank">CryptoEcon 2020</a> in February 2020, and contains minor changes from the current wiki. The wiki is maintained however it is not currently in sync with either edition and contains no images. The 2nd edition was released globally <a href="https://www.amazon.com/dp/1735060828" target="blank_">on Amazon</a> as a paperback and soon after as a Kindle e-book. There are no changes to the list of chapters between the two editions, though there are some material content changes. The 2nd edition is now also available as a <a href="Cryptoeconomics.pdf" target="blank_">free pdf</a>. Each format carries its own ISBN and a version number. <u>The current version is 1.2.3.</u>
+                        <i>Cryptoeconomics</i> evolved over a couple of years as a series of topics on the <a href="https://github.com/libbitcoin/libbitcoin-system/wiki/Cryptoeconomics" target="_blank">libbitcoin-system GitHub wiki</a>. The 1st book edition was printed in Hanoi for <a href="https://cryptoecon.org" target="_blank">CryptoEcon 2020</a> in February 2020, and contains minor changes from the early wiki. The wiki is maintained and in sync with current editions, but contains no images. The 2nd edition was released globally <a href="https://www.amazon.com/dp/1735060828" target="blank_">on Amazon</a> as a paperback and soon after as a Kindle e-book. There are no changes to the list of chapters between the two editions, though there are some material content changes. The 2nd edition is now also available as a <a href="Cryptoeconomics.pdf" target="blank_">free pdf</a>. Each format carries its own ISBN and a version number. <u>The current version is 1.2.3.</u>
                     </p>
                 </div>
             </div>
