Publish Spanish and Italian PDFs.

--- a/cryptoeconomics/index.html
+++ b/cryptoeconomics/index.html
@@ -43,10 +43,12 @@
                     <p>The <a href="https://www.amazon.fr/dp/B09X6Q27GL" target="blank_">paperback and Kindle</a></p>
                     <p>The <a href="https://github.com/lugaxker/cryptoeconomics-FR-translation#readme" target="blank_">wiki</a>.</p>
                     <p><b>ITALIAN</b></p>
+                    <p>The <a href="it/criptoeconomia.pdf" target="blank_">free pdf</a></p>
                     <!--<p>The <a href="it/cryptoeconomia.pdf" target="blank_">free pdf</a></p>-->
                     <p>The <a href="https://www.amazon.it/dp/1735060887" target="blank_">paperback and Kindle</a></p>
                     <p>The <a href="https://github.com/parsevalbtc/cryptoeconomics-IT-translation#readme" target="blank_">wiki</a>.</p>
                     <p><b>SPANISH</b></p>
+                    <p>The <a href="es/criptoeconomía.pdf" target="blank_">free pdf</a></p>
                     <!--<p>The <a href="it/cryptoeconomia.pdf" target="blank_">free pdf</a></p>-->
                     <p>The <a href="https://www.amazon.es/dp/B0BGF68MDB" target="blank_">paperback and Kindle</a></p>
                 </div>
